--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,15 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  main
+    div(class="restaurantSquare")
+      h2=Restaurant Name
+        div(class="theDeets")
+          h3>Cuisine Type
+          h3>City, State
+        div(class="theScore")
+          img(src="star.png", alt="rating star")
+          img(src="star.png", alt="rating star")
+          img(src="star.png", alt="rating star")
+          img(src="star.png", alt="rating star")
+          img(src="star.png", alt="rating star")
