--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,8 @@ body {
 
 header {
    width: 100%;
+   height: 75px;
+   border: 1px solid #7cc576;
    background-color: #7cc576;
    color: black;
    text-align: center;
@@ -17,7 +19,7 @@ header {
 
 main {
    padding: 50px;
-   width: 79%;
+   /*width: 80%;*/
    margin: 0 auto;
    overflow: auto;
 }
@@ -37,6 +39,12 @@ h3 {
    margin-top: 0;
 }
 
+a {
+   text-decoration: none;
+   color: grey;
+   font-size: 20px;
+}
+
 .restaurantSquare {
    background-color: #eee;
    border: 2px solid black;
@@ -44,14 +52,23 @@ h3 {
    height: 300px;
    float: left;
    padding: 15px;
-   margin: 25px;
-   background-image: url("italian.png");
+   margin: 15px;
+   background-image: url("../images/mexican.png");
 }
 
 .theDeets {
-   margin-top: 200px;
+   margin-top: 185px;
 }
 
 .theScore {
    float: right;
+}
+
+.showww {
+   width: 500px;
+   margin: 50px auto;
+   padding: 25px;
+   border: 2px solid black;
+   background-color: #eee;
+
 }
