--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,6 @@ html
     link(href='https://fonts.googleapis.com/css?family=Quicksand:400,700', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    header= title
+    header 
+      h1 gTables Restaurants
     block content
