--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -13,7 +13,10 @@ block content
             - for (var x = 0; x < rating; x++)
               img(src="../images/star.png", alt="rating star") 
           div.admin_things
-            a(href='/restaurants/'+ restaurant.id + '/edit') Edit
+            for employee in employees
+              - if (employee.restaurant_id === restaurant.id)
+                  p #{employee.first_name} #{employee.last_name}
           div.admin_things
+            a(href='/restaurants/'+ restaurant.id + '/edit') Edit
             form(action='/restaurants/#{restaurant.id}/delete' method='post')
               input(type='submit' value='Delete')
