--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header 
-      h1 gTables Restaurants
+      h1 
+        a(href='/') gTables Restaurants
     block content
