--- a/views/restaurants/edit.jade
+++ b/views/restaurants/edit.jade
@@ -91,7 +91,7 @@ block content
           textarea(rows="5" id='description' name='description' placeholder="Short Bio") #{restaurant.description}
           br
           button(type="submit") Submit
-          button(type="submit") Cancel
+          a(href='/restaurants/') Cancel
 
                   
     
