restructured some things and added validation

--- a/views/restaurants/edit.jade
+++ b/views/restaurants/edit.jade
@@ -90,9 +90,7 @@ block content
           br
           textarea(rows="5" id='description' name='description' placeholder="Short Bio") #{restaurant.description}
           br
-          button(type="submit") Submit
+          button(type="submit" id='editclickme') Submit
           a(href='/restaurants/') Cancel
   script(src='https://code.jquery.com/jquery-2.2.0.min.js')
   script(src='/js/editvalidateshit.js')
-                  
-    
