--- a/views/restaurants/new.jade
+++ b/views/restaurants/new.jade
@@ -91,8 +91,7 @@ block content
         br
         button(type="submit" id="clickmeclickme") Submit
         a(href='/restaurants/') Cancel
-script(type="text/javascript" src='https://code.jquery.com/jquery-2.2.0.min.js')
-//- script(type="text/javascript" src='../../public/js/addvalidateshit.js')
-script(type="text/javascript" src='../../public/js/test.js')
+  script(type="text/javascript" src='https://code.jquery.com/jquery-2.2.0.min.js')
+  script(type="text/javascript" src='/js/addvalidateshit.js')
                   
     
